--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -2,8 +2,11 @@ html {
   color: white;
 }
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: url(../../media/bgImage.png) no-repeat center center/cover;
-  height: 100vh;
+  height: 130vh;
 }
 .languges ul {
   color: white;
@@ -15,13 +18,11 @@ html {
 #he {
   background: url(../../media/israel.png) center center/cover;
 }
-/* #en{}
-#ar{}
-#{} */
-.article-container {
+.articles-container {
   width: 90%;
   height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
+  grid-gap: 10px;
 }
