--- a/client/src/About/About.css
+++ b/client/src/About/About.css
@@ -51,4 +51,15 @@
   border: 1px solid black;
   width: 40vw;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.intro,
+.aboutUs {
+  width: 100%;
+  height: 100%;
+  color: black;
+  margin: 1vw;
+  padding: 1vw;
+  line-height: 1.6;
 }
