--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+body {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 h1 {
   text-align: center;
   margin: 15px 0;
@@ -16,7 +23,6 @@ h1 {
   margin: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  width: 50%;
 }
 button {
   margin: 2px 5px;
