--- a/client/src/articles/articles.css
+++ b/client/src/articles/articles.css
@@ -1,11 +1,12 @@
 .article-container{
+    text-decoration: none;
     background-color: rgba(255, 228, 196, 0.466);
     color: black;
     display: flex ;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    width: 20vw;
+    width: 33.32vw;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
