--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -19,7 +19,7 @@ html {
   background: url(../../media/israel.png) center center/cover;
 }
 .articles-container {
-  width: 90%;
+  width: 100vw;
   height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
