--- a/client/src/ArticlePage/ArticlePage.css
+++ b/client/src/ArticlePage/ArticlePage.css
@@ -5,12 +5,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 70vw;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    width: 100vw;
 }
-
+.content-container {
+    width: 60vw;
+    display: flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.content-container * {
+    margin: 10px;
+}
 .article-page-img{
     width: 40vw;
 }
