--- a/client/src/About/About.css
+++ b/client/src/About/About.css
@@ -33,29 +33,32 @@
   animation: spinnerforth 0.6s linear infinite;
 }
 .main-container {
-  /* background: url("/public/assets/about_back.jpg") no-repeat center
-    center/contain; */
+  background: url("/public/assets/about_back.jpg") no-repeat center
+    center/cover;
   width: 100vw;
-  height: 100vh;
-  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .logos-container {
-  border: 1px solid black;
   width: 30vw;
   height: 100%;
 }
 .content {
-  border: 1px solid black;
+  background-color: bisque;
   width: 40vw;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  opacity: 0.8;
+}
+.intro {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 .intro,
 .aboutUs {
+  text-align: center;
   width: 100%;
   height: 100%;
   color: black;
