--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -20,9 +20,16 @@ html {
 }
 .articles-container {
   width: 100vw;
-  height: 80vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 10px;
+}
+@media (max-width: 820px) {
+  .articles-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
