--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,15 +3,33 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  scroll-behavior: smooth; 
 }
 body {
-  width: 100vw;
+  font-size: 10px;
+  width: 98vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 h1 {
+  font-size: 3rem;
+  text-align: center;
+  margin: 15px 0;
+}
+h2 {
+  font-size: 1.8rem;
+  text-align: center;
+  margin: 15px 0;
+}
+h3 {
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 15px 0;
+}
+p {
+  font-size: 1.2rem;
   text-align: center;
   margin: 15px 0;
 }
