--- a/client/src/Header/Header.css
+++ b/client/src/Header/Header.css
@@ -6,9 +6,17 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.header-continer > h1 {
-  font-size: 40px;
+.main-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  height: 8rem;
+  width: 40vw;
+  position: relative;
 }
+
 .logo {
   width: 10vw;
   height: 8vh;
@@ -45,6 +53,16 @@ nav ul li a::after {
   background-color: #fff;
   transition: ease-in-out 0.25s;
 }
+.main-link::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0%;
+  height: 5%;
+  top: 0;
+  background-color: #fff;
+  transition: ease-in-out 0.25s;
+}
 
 nav ul li a::before {
   content: "";
@@ -57,11 +75,28 @@ nav ul li a::before {
   background-color: #fff;
   transition: ease-in-out 0.25s;
 }
+.main-link::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0%;
+  height: 5%;
+  right: 0;
+  bottom: 0;
+  background-color: #fff;
+  transition: ease-in-out 0.25s;
+}
 nav ul li a:hover::after {
   width: 100%;
 }
+.main-link:hover::after {
+  width: 40vw;
+}
 nav ul li a:hover::before {
   width: 100%;
+}
+.main-link:hover::before {
+  width: 40vw;
 }
 .nav-btn {
   cursor: pointer;
@@ -74,6 +109,9 @@ nav ul li a:hover::before {
 }
 
 @media (max-width: 820px) {
+  body{
+    font-size: 5px;
+  }
   .logo {
     margin-left: 2vw;
   }
