--- a/client/src/articles/articles.css
+++ b/client/src/articles/articles.css
@@ -12,6 +12,33 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
 }
+.article-container-mobile{
+    display: none;
+}
+@media (max-width: 820px) {
+    .article-container{
+       display: none;
+    }
+    .article-container-mobile {
+        text-decoration: none;
+        background-color: rgba(204, 204, 204, 0.507);
+        color: black;
+        display: flex ;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        min-height: 30vh;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+    }
+    .article-container-mobile > div {
+        margin: 10px;
+    }
+  }
+.article-container:hover {
+    background-color: rgba(238, 238, 238, 0.507);
+}
 .article-container > div {
     margin: 10px;
 }
