--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -5,6 +5,7 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   background: url(../../media/bgImage.png) no-repeat center center/cover;
   height: 190vh;
 }
@@ -21,9 +22,16 @@ html {
 .articles-container {
   width: 100vw;
   display: grid;
+  align-items: center;
+  justify-content: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 10px;
+}
+.article-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 820px) {
   .articles-container{
