--- a/client/src/pages/Header/Header.css
+++ b/client/src/pages/Header/Header.css
@@ -159,29 +159,40 @@ nav ul li a:hover::before {
     visibility: visible;
     opacity: 1;
   }
+  .header-continer{
+    height:18vh ;
+    flex-direction: column;
+    opacity: 0.9;
+  }
+  .main-link {
+    width: 100vw;
+  }
+  .content {
+    margin-bottom: 50px;
+  }
 }
 
 button[name="en"]{
   width: 50px;
   height: 40px;
   cursor: pointer;
-  background: url(../media/usa.png) center center/cover no-repeat;
+  background: url(../../media/usa.png) center center/cover no-repeat;
 }
 button[name="he"]{
   width: 50px;
   height: 40px;
   cursor: pointer;
-  background: url(../media/israel.png) center center/cover no-repeat;
+  background: url(../../media/israel.png) center center/cover no-repeat;
 }
 button[name="ru"]{
   width: 50px;
   height: 40px;
   cursor: pointer;
-  background: url(../media/russia.png) center center/contain no-repeat;
+  background: url(../../media/russia.png) center center/contain no-repeat;
 }
 button[name="ar"]{
   width: 50px;
   height: 40px;
   cursor: pointer;
-  background: url(../media/ae.png) center center/cover no-repeat;
+  background: url(../../media/ae.png) center center/cover no-repeat;
 }
