--- a/client/src/pages/ArticlePage/ArticlePage.css
+++ b/client/src/pages/ArticlePage/ArticlePage.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 50px 0;
+    margin: 20px 0 50px 0;
 }
 .content-container * {
     margin: 10px;
@@ -70,5 +70,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin: 20px 0 85px 0;
     }
 }
