--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0.8;
-  margin-bottom: 50px;
+  margin: 0 0 50px 0;
 }
 .intro {
   text-align: center;
@@ -36,5 +36,6 @@
 @media (max-width: 820px) {
   .content{
     width: 90vw;
+    margin: 0 0 50px 0;
   }
 }
