--- a/client/src/pages/Header/Header.css
+++ b/client/src/pages/Header/Header.css
@@ -118,10 +118,24 @@ nav ul li a:hover::before {
   opacity: 0;
   font-size: 4vh;
 }
+.link-display{
+  display: none;
+}
 
 @media (max-width: 820px) {
   body{
     font-size: 5px;
+  }
+  .link-display{
+    background-color:hsl(220 12% 20%);
+    width: 100vw;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+    display: block;
+    position: absolute;
+    bottom: 50px;
   }
   .logo {
     margin-left: 2vw;
@@ -168,7 +182,7 @@ nav ul li a:hover::before {
     width: 100vw;
   }
   .content {
-    margin-bottom: 50px;
+    margin-bottom: 85px;
   }
 }
 
