--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 30vw;
+    width: 100%;
     min-height: 70vh;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -27,6 +27,16 @@
     background-color: rgba(245, 245, 220, 0.623);
 }
 .article-container .article-img{ 
+    z-index: -1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    top: 0;
+    left: 0;
+    opacity: 0.5;
+}
+.article-container-mobile .article-img{ 
     z-index: -1;
     position: absolute;
     width: 100%;
