--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -5,8 +5,9 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  background: url(../../media/bgImage.png) no-repeat center center/cover;
+  justify-content: center;
+  /* background: url(../../media/bgImage.png) no-repeat center center/cover; */
+  background:gray;
   min-height: 100vh;
 }
 .languges ul {
@@ -20,14 +21,14 @@ html {
   background: url(../../media/israel.png) center center/cover;
 }
 .articles-container {
-  width: 100vw;
+  width: 98%;
   display: grid;
   align-items: center;
   justify-content: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-gap: 10px;
-  margin: 20px 0 50px 0;
+  grid-gap: 15px;
+  margin: 20px 0 50px 20px;
 }
 .article-link {
   display: flex;
@@ -40,7 +41,7 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0px 0 85px 0;
+    margin: 0px 0 85px 0.8%;
   }
   
 }
