--- a/client/src/pages/Header/Header.css
+++ b/client/src/pages/Header/Header.css
@@ -216,3 +216,10 @@ button[name="ar"]{
   cursor: pointer;
   background: url(../../media/ae.png) center center/cover no-repeat;
 }
+.lang-btn{
+  transition: 0.2s;
+}
+.lang-btn:hover {
+  transition: 0.2s;
+  opacity: 0.7;
+}
