very last fixes

--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -23,6 +23,11 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+.team-member a{
+  color: black;
+  text-decoration: none;
+}
 .intro,
 .aboutUs {
   text-align: center;
@@ -38,4 +43,10 @@
     width: 90vw;
     margin: 0 0 50px 0;
   }
+}
+.linkedin {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  background: url(../../media/linkedin.png) center center/cover no-repeat;
 }
