--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0.9;
-  margin: 0 0 100px 0;
+  /* margin: 0 0 100px 0; */
 }
 .intro {
   text-align: center;
@@ -68,7 +68,7 @@
 @media (max-width: 820px) {
   .content{
     width: 90vw;
-    margin: 0 0 100px 0;
+    margin: 0 0 130px  !important;
   }
   .github {
     position: absolute;
