--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   opacity: 0.9;
-  /* margin: 0 0 100px 0; */
+  margin: 0 0 100px 0;
 }
 .intro {
   text-align: center;
