--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -1,5 +1,6 @@
 .article-container{
     text-align: center;
+    text-shadow: 1px 1px rgb(88, 88, 88);
     text-decoration: none;
     background-color: rgba(204, 204, 204, 0.507);
     color: black;
@@ -7,16 +8,17 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
-    min-height: 80vh;
+    width: 100vw;
+    height: 75vh;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     position: relative;
         z-index: 2;
 }
-.article-container  .title , .article-container .description{
-    padding: 20px;
+.article-container  .title {
+    background-color: rgba(136, 136, 136, 0.527);
+    padding: 10px 20px;
 }
 .article-container-mobile{
     display: none;
@@ -26,7 +28,6 @@
 }
 
 .article-container p {
-    margin-bottom: 4rem;
     background-color: #888
 }
 .article-container .article-img{ 
@@ -91,6 +92,7 @@
     padding: 10px;
     background: url(../../../media/panet.png) center center/contain no-repeat;
 }
+
 @media (max-width: 820px) {
     .article-container{
        display: none;
