--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -8,7 +8,7 @@ html {
   justify-content: center;
   /* background: url(../../media/bgImage.png) no-repeat center center/cover; */
   background:gray;
-  min-height: 100vh;
+  min-height: 89vh;
 }
 .languges ul {
   color: white;
@@ -21,14 +21,11 @@ html {
   background: url(../../media/israel.png) center center/cover;
 }
 .articles-container {
-  width: 98%;
-  display: grid;
+  display: flex;
   align-items: center;
   justify-content: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-gap: 15px;
-  margin: 20px 0 100px 20px;
+  width: 98%;
+  margin: 10px 0 100px 20px;
 }
 .article-link {
   display: flex;
@@ -81,7 +78,10 @@ html {
     transform: rotate(360deg);
   }
 }
-
+.arrows-c {
+  width: 50px;
+  height: 50px;
+}
 @media (max-width: 820px) {
   .articles-container{
     display: flex;
