--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -14,7 +14,7 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     position: relative;
-        z-index: 2;
+    z-index: 2;
 }
 .article-container  .title {
     background-color: rgba(136, 136, 136, 0.527);
@@ -111,6 +111,7 @@
         transition: 0.3s;
         position: relative;
         z-index: 2;
+        margin-top: 10px;
     }
     .article-container-mobile .article-img{ 
         z-index: -1;
