--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -78,12 +78,19 @@ html {
     transform: rotate(360deg);
   }
 }
+
 .arrows-c {
   width: 50px;
   height: 50px;
 }
+.articles-container-mobile {
+  display: none;
+}
 @media (max-width: 820px) {
   .articles-container{
+    display: none !important;
+  }
+  .articles-container-mobile{
     display: flex;
     flex-direction: column;
     justify-content: center;
