--- a/client/src/pages/Header/Header.css
+++ b/client/src/pages/Header/Header.css
@@ -1,10 +1,10 @@
 .header-continer {
-  height: 11vh;
   width: 100vw;
   background-color: darkblue;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  z-index: 10;
 }
 body {
   position: relative;
@@ -19,7 +19,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  bottom: 20px;
+  bottom: 0px;
 }
 .main-link {
   display: flex;
@@ -27,14 +27,12 @@ body {
   align-items: center;
   color: #fff;
   text-decoration: none;
-  height: 8rem;
   width: 40vw;
   position: relative;
 }
 
 .logo {
   width: 10vw;
-  height: 8vh;
 }
 nav {
   display: flex;
@@ -49,7 +47,7 @@ nav ul {
   justify-content: space-between;
 }
 nav ul li {
-  padding: 5vw 2vw;
+  padding: 3vh 2vw;
   list-style: none;
 }
 nav ul li a {
@@ -127,11 +125,14 @@ nav ul li a:hover::before {
 }
 
 @media (max-width: 820px) {
-  body{
-    font-size: 5px;
+  .news-link {
+    display: none;
+  }
+  .about-link {
+    display: none;
   }
   .link-display{
-    background-color:rgb(45, 54, 57);
+    background-color:darkblue;
     width: 100vw;
     color: white;
     font-weight: bold;
@@ -178,7 +179,6 @@ nav ul li a:hover::before {
     opacity: 1;
   }
   .header-continer{
-    height:110px ;
     flex-direction: column;
     opacity: 0.9;
   }
