--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -6,7 +6,7 @@
     color: black;
     display: flex ;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     height: 70vh;
     border-radius: 10px;
@@ -16,7 +16,15 @@
     z-index: 2;
 }
 
-.article-container  .title {
+.website-img-container{
+        width: 100%;
+        background-color: white;
+        border-radius: 10px 10px 0 0;
+        display: flex;
+        justify-content: center;
+    }
+
+.title {
     background-color: rgba(136, 136, 136, 0.527);
     padding: 10px 20px;
 }
@@ -27,8 +35,8 @@
     background-color: rgba(238, 238, 238, 0.507);
 }
 
-.article-container p {
-    background-color: #888
+.article-container p,.article-container-mobile  p {
+   background-color: rgba(136, 136, 136, 0.527);
 }
 .article-container .article-img{ 
     z-index: -1;
@@ -47,7 +55,6 @@
     border-radius: 10px;
     top: 0;
     left: 0;
-    opacity: 0.5;
 }
 .article-img{
     width: 30vw;
@@ -98,30 +105,29 @@
     }
     .article-container-mobile {
         text-decoration: none;
-        background-color: rgba(204, 204, 204, 0.507);
         color: black;
         display: flex ;
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        min-height: 30vh;
+        min-height: 70vh;
         border-radius: 10px;
         box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
         transition: 0.3s;
         position: relative;
         z-index: 2;
-        margin-top: 10px;
+        margin-top: 20px;
     }
+
     .article-container-mobile .article-img{ 
-        z-index: -1;
+    z-index: -1;
         position: absolute;
         width: 100%;
         height: 100%;
         top: 0;
-        opacity: 0.5;
     }
     .article-container-mobile .website-img{ 
-        width: 35vw;
+        width: 45vw;
     }
     [article-name] {
         padding: 0;      
