--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -11,7 +11,7 @@
   height: 100%;
 }
 .content {
-  background-color: #888;
+  background-color: #fff;
   width: 40vw;
   display: flex;
   flex-direction: column;
