--- a/client/src/pages/ArticlePage/ArticlePage.css
+++ b/client/src/pages/ArticlePage/ArticlePage.css
@@ -1,5 +1,5 @@
 .article-page-container {
-    background-color: #888;
+    background-color: darkslategray;
     color: black;
     display: flex ;
     flex-direction: column;
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     margin: 20px 0 100px 0;
+    background-color: #ffffff;
 }
 .content-container * {
     margin: 10px;
