--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -3,11 +3,11 @@
     text-shadow: 1px 1px rgb(88, 88, 88);
     text-decoration: none;
     color: black;
-    display: rlex ;
+    display: flex ;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 70vh;
+    height: 50vh;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
