--- a/client/src/pages/home/homepage.css
+++ b/client/src/pages/home/homepage.css
@@ -4,7 +4,9 @@ html {
 body {
   background-color: darkslategray;
   min-height: 100%;
+  overflow-x: hidden;
 }
+
 .page {
   display: flex;
   flex-direction: column;
@@ -24,12 +26,16 @@ body {
 }
 
 .articles-container{
-  height: 70vh;
-  margin-bottom: 135px;
+  width: 90vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  margin-bottom: 100px;
+  gap: 100px;
 }
 
 .articles-container > div {
-  margin-bottom: 70px;
+  /* margin-bottom: 70px; */
 }
 .article-link {
   display: flex;
@@ -38,7 +44,7 @@ body {
 }
 .loader-container {
   width: 100vw;
-  height: 70vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
