--- a/client/src/pages/home/articles/articles.css
+++ b/client/src/pages/home/articles/articles.css
@@ -7,35 +7,41 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    height: 70vh;
+    width: 25vw;
+    height: 50vh;
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 }
-
+.article-container:hover {
+    width: 26vw;
+    padding: 0 0.5vw;
+    box-shadow: 10px 20px 10px 20px rgb(104, 212, 248);
+}
+div.home-website-img[article-name] {
+    width: 100%;
+}
 .website-img-container{
         width: 100%;
-        background-color: white;
+        background-color: rgba(255, 255, 255, 0.589);
         border-radius: 10px 10px 0 0;
         display: flex;
+        flex-direction: column;
         justify-content: center;
     }
 
 .title {
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.562);
     padding: 10px 20px;
 }
 .article-container-mobile{
     display: none;
 }
-.article-container:hover {
-    padding: 10px;
-}
 
 .article-container p,.article-container-mobile  p {
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     padding: 10px 20px;
 }
 .article-container .article-img{ 
@@ -132,5 +138,10 @@
     [article-name] {
         padding: 0;      
     }
+  }
+  .created-at {
+    color: #fff;
+    background-color: #333;
+    font-size: 12px;
   }
   
